versioned_docs/version-0.4.2/yearn-lens/contracts.md
# Deployed Lens Contracts
## Mainnet
### Oracle
0x83d95e0D5f402511dB06817Aff3f9eA88224B030 - Oracle

### Management List
0xf64e58Ee8C7BadC741A7ea98FB65488084385674 - ManagementList

### Registry Adapters
0x240315db938d44bb124ae619f5Fd0269A02d1271 - V2
0xFF0bd2d0C7E9424ccB149ED3757155eEf41a793D - Iron Bank

### TVL Adapters
0x14d6E0908baE40A2487352B2a9Cb1A6232DA8785 - V2
0xF4fB8903A41fC78686b26DE55502cdE42a4c6c78 - V1
0xec7Ac8AC897f5082B2c3d4e8D2173F992A097F24 - Iron Bank
0x1007eD6fdFAC72bbea9c719cf1Fa9C355D248691 - Earn
0x560144C25E53149aC410E5D33BDB131e49A850e5 - veCRV

#### Helpers
0x5AACD0D03096039aC4381CD814637e9FB7C34a6f - Helper
0xC3A0bEF4A47bA579Cbba510aE2c59d9b9bf9467C - UniqueAddressesHelper
0xae813841436fe29b95a14ac701afb1502c4cb789 - Strategies helper
0x4218E20DB87023049Fc582Aaa4bD47a3611A20Ab - AllowancesHelper
0x957e3ae7983155a9f9e08da555b8084448be26e4 - AddressMergeHelper 
0x5d63a8584d91ebc5033d022afd6c5a7c7fddc99b - PricesHelper
0x855ffe28019106d089bC018Df18838f8d241c402 - BalancesHelper

#### Generators
0xce29d34C8e88A2E1eDde10AD4eEE4f3e379fc041 - AddressesGeneratorV1Vaults
0x437758D475F70249e03EDa6bE23684aD1FC375F0 - AddressesGeneratorV2Vaults
0xF536399c04683D7ab0BCb1308C245b4bbb539344 - AddressesGeneratorEarn
0xa0B57619A980DFEfD50f24F310EE1b55A40A9D46 - AddressesGeneratorIronBank

#### Delegation mapping
0xC01a529c01f9399c928a4aFc50E25f12D1e5b142 - DelegatedBalanceMapping

#### Calculations
0xE9cfF16bdac9729F18CBAC451EcCA6c50b372207 - CalculationsCurve
0x55e9B18fefFF7E00548d54480373Fc8843De8eA4 - CalculationsIronBank
0x88dE7d7F7b9597C86b8cD195374FbF602934F334 - CalculationsSushiswap
0x38477F2159638956d33E18951d98238a53b9aa3C - CalculationsYearnVaults

#### Registries
0x62a4e0E7574E5407656A65CC8DbDf70f3C6EB04B - Earn (new)
0x50c1a2eA0a861A967D9d0FFE2AE4012c2E053804 - V2 (existing)
0x3eE41C098f9666ed2eA246f4D2558010e59d63A0 - V1 (existing)
0xAB1c342C7bf5Ec5F02ADEA1c2270670bCa144CbB - IB (existing)
