versioned_docs/version-0.4.3/yearn-lens/contracts.md
# Deployed Lens Contracts

&nbsp;

## Mainnet

### Oracle

0x83d95e0D5f402511dB06817Aff3f9eA88224B030 - Oracle  

### Management List

0xf64e58Ee8C7BadC741A7ea98FB65488084385674 - ManagementList  

### Registry Adapters

0x240315db938d44bb124ae619f5Fd0269A02d1271 - V2  
0xFF0bd2d0C7E9424ccB149ED3757155eEf41a793D - Iron Bank  

### TVL Adapters

0x14d6E0908baE40A2487352B2a9Cb1A6232DA8785 - V2  
0xF4fB8903A41fC78686b26DE55502cdE42a4c6c78 - V1  
0xec7Ac8AC897f5082B2c3d4e8D2173F992A097F24 - Iron Bank  
0x1007eD6fdFAC72bbea9c719cf1Fa9C355D248691 - Earn  
0x560144C25E53149aC410E5D33BDB131e49A850e5 - veCRV  

#### Helpers

0x5AACD0D03096039aC4381CD814637e9FB7C34a6f - Helper  
0xC3A0bEF4A47bA579Cbba510aE2c59d9b9bf9467C - UniqueAddressesHelper  
0xae813841436fe29b95a14ac701afb1502c4cb789 - Strategies helper  
0x4218E20DB87023049Fc582Aaa4bD47a3611A20Ab - AllowancesHelper  
0x957e3ae7983155a9f9e08da555b8084448be26e4 - AddressMergeHelper  
0x5d63a8584d91ebc5033d022afd6c5a7c7fddc99b - PricesHelper  
0x855ffe28019106d089bC018Df18838f8d241c402 - BalancesHelper  

#### Generators

0xce29d34C8e88A2E1eDde10AD4eEE4f3e379fc041 - AddressesGeneratorV1Vaults  
0x437758D475F70249e03EDa6bE23684aD1FC375F0 - AddressesGeneratorV2Vaults  
0xF536399c04683D7ab0BCb1308C245b4bbb539344 - AddressesGeneratorEarn  
0xa0B57619A980DFEfD50f24F310EE1b55A40A9D46 - AddressesGeneratorIronBank  

#### Delegation mapping

0xC01a529c01f9399c928a4aFc50E25f12D1e5b142 - DelegatedBalanceMapping  

#### Calculations

0xE9cfF16bdac9729F18CBAC451EcCA6c50b372207 - CalculationsCurve  
0x55e9B18fefFF7E00548d54480373Fc8843De8eA4 - CalculationsIronBank  
0x88dE7d7F7b9597C86b8cD195374FbF602934F334 - CalculationsSushiswap  
0x38477F2159638956d33E18951d98238a53b9aa3C - CalculationsYearnVaults  

#### Registries

0x62a4e0E7574E5407656A65CC8DbDf70f3C6EB04B - Earn (new)  
0x50c1a2eA0a861A967D9d0FFE2AE4012c2E053804 - V2 (existing)  
0x3eE41C098f9666ed2eA246f4D2558010e59d63A0 - V1 (existing)  
0xAB1c342C7bf5Ec5F02ADEA1c2270670bCa144CbB - IB (existing)  

## Optimism

0x8273217252254Ad7353f227aaEcd2b1C4A326Fa2 - Addresses Provider  

### Oracle

0xB082d9f4734c535D9d80536F7E87a6f4F471bF65 - Oracle  

### Management List

0x7E9756E1427B3c38F001F9D272D8d62BEF63D619 - Management List  

### Registry Adapters

0xBcfCA75fF12E2C1bB404c2C216DBF901BE047690 - RegistryAdapterV2Vault  

#### Helpers

0x776C1E69B858f1B9622085052Fb7B64a196Ac602 - Helper  
0x94141D7BFf3D04D61CE65B917BDd37b655e08f18 - AllowancesHelper  
0x167aA4Ba31B8285707d1489ad705cb24CF4E5186 - BalancesHelper  
0xD3A93C794ee2798D8f7906493Cd3c2A835aa0074 - StrategiesHelper  
0x156bAB355E81b498072C9Ce3cF655e9844A12529 - AddressMergeHelper  

#### Generators

0xD63aB09ac2048a7eCac92f0fFad5F104edD0E032 - Vault v2 Addresses Generator  

#### Calculations

0x5FD3815DcB668200A662114fbC9aF13AC0A55b4D - Chainlink Calculations  
0x0Ffe8434eAe67C9838b12C3cd11ac4005DAa7227 - Curve Calculations  
0x0000000022D53366457F9d5E68Ec105046FC4383 - Curve Registry Address Provider  

## Fantom

0xac5A9E4135A3A26497F3890bFb602b06Ee592B61 - AddressesProvider  

### Oracle

0x57AA88A0810dfe3f9b71a9b179Dd8bF5F956C46A - Oracle  

### Management List

0x5EA7E501c9A23F4A76Dc7D33a11D995B13a1dD25 - ManagementList  

### Registry Adapters

0xF628Fb7436fFC382e2af8E63DD7ccbaa142E3cd1 - RegisteryAdapterV2Vault  
0x1164587b49ff7aCE303962cC7A7E0841C1b34986 - RegistryAdapterIronBank  

#### Helpers

0xE55Dd55b3355c261A048B3f310706C7478657d74 - Helper  
0x14785E5E3650F0603eE17401c9890De380713914 - HelperAllowances  
0x6B8DE08D2520C955554E837aE72022Cd46Ba7F0e - HelperBalances  
0x001d0a58B336F60ee050cB11EE455Fd7eB984518 - HelperAddressesMerger  
0x97D0bE2a72fc4Db90eD9Dbc2Ea7F03B4968f6938 - HelperStrategies  

#### Calculations

0x0b53e9df372e72d8fdCDBEDfbb56059957a37128 - CalculationsCurve  
0x44536dE2220987d098d1d29D3AAfc7f7348E9ee4 - CalculationsSpooky  
0x560144C25E53149aC410E5D33BDB131e49A850e5 - CalculationsSushiswap  
0xebAA0B431618bCd9eA67D39C232625c20880d9bA - CalculationsBand  

#### Registries

0x727fe1759430df13655ddb0731dE0D0FDE929b04 - Registry  
0x7f462B92F92114A2D57A03e5Ae2DB5DA28b77d73 - Mechanics Registry  
0x8CC45f739104b3Bdb98BFfFaF2423cC0f817ccc1 - VaultsRegistryHelper  

## Arbitrum 

0xcAd10033C86B0C1ED6bfcCAa2FF6779938558E9f - Addresses Provider  

### Oracle

0x043518AB266485dC085a1DB095B8d9C2Fc78E9b9 - Oracle  
0xdF43263DFec19117f2Fe79d1D9842a10c7495CcD - Base Fee Oracle Contract  

### Management List

0x8A5f0876b217ee61d101E022Bb00d032e6D353bc - ManagementList  

### Registry Adapters

0x57AA88A0810dfe3f9b71a9b179Dd8bF5F956C46A - RegistryAdapterV2Vault  
0x7AAd416eB4e16a27b85e7076dD56742A44E9d25B - RegistryAdapterIronBank  

#### Helpers

0xE55Dd55b3355c261A048B3f310706C7478657d74 - Helper  
0xf5875d60241C8F6448649206A6f485b812ACF44D - AllowancesHelper  
0x94734Ba0f9f8c2464d963a402743Fd79B402Efd7 - BalancesHelper  
0x2A139A2812f1424F0C88e3d73854b16fb04E9449 - AddressMergeHelper  
0x66a1A27f4b22DcAa24e427DCFFbf0cdDd9D35e0f - StrategiesHelper  

#### Generators

0x3A8efa2D87d60c0289f19B44A0928F4269c0f094 - AddressesGeneratorV2Vaults  

#### Calculations

0x5EA7E501c9A23F4A76Dc7D33a11D995B13a1dD25 - CalculationsSushiswap  